Fix date-icon spacing in reservation confirm to match Figma

--- a/src/pages/Shop/ShopPrice/PriceDetail/ReservationConfirm.css
+++ b/src/pages/Shop/ShopPrice/PriceDetail/ReservationConfirm.css
@@ -73,7 +73,7 @@
 }
 
 .rc-field--row {
-    gap: 31px;
+    gap: 7px;
     padding-left: 21px;
 }
 
